--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "framer-motion": "^9.0.1",
     "gsap": "^3.11.4",
+    "maath": "^0.5.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "react-three-fiber": "^6.0.13",
+    "valtio": "^1.10.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
